# RSA_chat

./: .gitignore  LICENSE  README.md
Android/RSA_chat/: settings.gradle.kts
Android/RSA_chat/app/: build.gradle.kts
Android/RSA_chat/app/src/androidTest/java/com/example/rsa_chat/: ExampleInstrumentedTest.java
Android/RSA_chat/app/src/main/: AndroidManifest.xml
Android/RSA_chat/app/src/main/cpp/: CMakeLists.txt  rsa_chat_core.cpp  rsa_chat_core.h
Android/RSA_chat/app/src/main/java/com/example/rsa_chat/: MainActivity.java
Android/RSA_chat/app/src/main/res/layout/: activity_main.xml
Android/RSA_chat/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
Android/RSA_chat/app/src/main/res/values-night/: themes.xml
Android/RSA_chat/app/src/test/java/com/example/rsa_chat/: ExampleUnitTest.java
Android/RSA_chat/gradle/wrapper/: gradle-wrapper.properties
PC_Windows/rsa_chat/: .gitignore  CMakeLists.txt  ChatPage.cpp  ChatPage.h  MainWindow.cpp  MainWindow.h  SetupPage.cpp  SetupPage.h  app_icon.rc  echo_server.cpp  main.cpp  rsa_chat_core.cpp  rsa_chat_core.h
